# hlsl-clippy

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_LICENSES.md  package-lock.json  package.json
cli/: CMakeLists.txt
cli/src/: main.cpp
core/: CMakeLists.txt
core/include/hlsl_clippy/: config.hpp  control_flow.hpp  diagnostic.hpp  ir.hpp  language.hpp  lint.hpp  reflection.hpp  rewriter.hpp  rule.hpp  source.hpp  suppress.hpp  version.hpp
core/include/shader_clippy/: config.hpp  control_flow.hpp  diagnostic.hpp  ir.hpp  language.hpp  lint.hpp  reflection.hpp  rewriter.hpp  rule.hpp  source.hpp  suppress.hpp  version.hpp
core/src/: config.cpp  language.cpp  lint.cpp  parser.cpp  parser_internal.hpp  rewriter.cpp  rule_context.cpp  source.cpp  suppress.cpp  version.cpp
core/src/control_flow/: cfg_builder.cpp  cfg_builder.hpp  cfg_storage.cpp  cfg_storage.hpp  dominators.cpp  dominators.hpp  engine.cpp  engine.hpp  uniformity_analyzer.cpp  uniformity_analyzer.hpp
core/src/ir/: engine.cpp  engine.hpp
core/src/query/: query.cpp  query.hpp
core/src/reflection/: engine.cpp  engine.hpp  reflection.cpp  slang_bridge.cpp  slang_bridge.hpp
core/src/rules/: acos_without_saturate.cpp  all_resources_bound_not_set.cpp  anisotropy_without_anisotropic_filter.cpp  as_payload_over_16k.cpp  barrier_in_divergent_cf.cpp  bgra_rgba_swizzle_mismatch.cpp  bool_straddles_16b.cpp  branch_on_uniform_missing_attribute.cpp  buffer_load_width_vs_cache_line.cpp  byteaddressbuffer_load_misaligned.cpp  byteaddressbuffer_narrow_when_typed_fits.cpp  cbuffer_divergent_index.cpp  cbuffer_fits_rootconstants.cpp  cbuffer_large_fits_rootcbv_not_table.cpp  cbuffer_load_in_loop.cpp  cbuffer_padding_hole.cpp  clamp01_to_saturate.cpp  clip_from_non_uniform_cf.cpp  cluster_id_without_cluster_geometry_feature_check.cpp  coherence_hint_encodes_shader_type.cpp  coherence_hint_redundant_bits.cpp  compare_equal_float.cpp  comparison_sampler_without_comparison_op.cpp  comparison_with_nan_literal.cpp  compute_dispatch_grid_shape_vs_quad.cpp  coopvec_base_offset_misaligned.cpp  coopvec_fp4_fp6_blackwell_layout.cpp  coopvec_fp8_with_non_optimal_layout.cpp  coopvec_non_optimal_matrix_layout.cpp  coopvec_non_uniform_matrix_handle.cpp  coopvec_stride_mismatch.cpp  coopvec_transpose_without_feature_check.cpp  countbits_vs_manual_popcount.cpp  cross_with_up_vector.cpp  dead_store_sv_target.cpp  derivative_in_divergent_cf.cpp  descriptor_heap_no_non_uniform_marker.cpp  descriptor_heap_type_confusion.cpp  discard_then_work.cpp  dispatchmesh_grid_too_small_for_wave.cpp  (+156 more)
lsp/: CMakeLists.txt
lsp/src/: config_resolver.cpp  config_resolver.hpp  main.cpp
lsp/src/document/: manager.cpp  manager.hpp  uri.cpp  uri.hpp
lsp/src/rpc/: dispatcher.cpp  dispatcher.hpp  framing.cpp  framing.hpp  message.hpp
lsp/src/server/: code_actions.cpp  code_actions.hpp  diagnostic_convert.cpp  diagnostic_convert.hpp  handlers.cpp  handlers.hpp
tests/: .clang-tidy  CMakeLists.txt  KNOWN_FAILURES.md
tests/bench/: CMakeLists.txt  README.md  bench_config.hpp.in  bench_lint.cpp
tests/corpus/: FP_RATES.md  README.md  SOURCES.md
tests/corpus/amplification/: dynamic_lod_as.hlsl  meshlet_cull_as.hlsl
tests/corpus/compute/: bitonic_presort_cs.hlsl  bloom_downsample_cs.hlsl  fill_light_grid_cs.hlsl  gaussian_blur_cs.hlsl  generate_histogram_cs.hlsl  hello_work_graph_wg.hlsl  indirect_cull_cs.hlsl  nbody_gravity_cs.hlsl  particle_update_cs.hlsl  spd_cs_downsampler.hlsl  tone_map_cs.hlsl
tests/corpus/mesh/: meshlet_render_ms.hlsl
tests/corpus/pixel/: meshlet_blinn_phong_ps.hlsl  model_viewer_ps.hlsl  skybox_ibl_ps.hlsl  wave_intrinsics_ps.hlsl
tests/corpus/raytracing/: closest_hit_shader.hlsl  miss_shader.hlsl  ray_generation.hlsl  rt_procedural_geometry.hlsl  rt_simple_lighting.hlsl
tests/corpus/vertex/: depth_prepass_vs.hlsl  model_viewer_vs.hlsl  particle_instanced_vs.hlsl  skinned_mesh_vs.hlsl
tests/fixtures/: README.md  clean.hlsl
tests/fixtures/phase2/: math_extra.hlsl  misc_extra.hlsl  negative_lookalikes.hlsl  realistic_pbr_vs.hlsl  realistic_post_ps.hlsl  redundant.hlsl  redundant_extra.hlsl
tests/fixtures/phase3/: bindings.hlsl  bindings_extra.hlsl  interpolators.hlsl  interpolators_extra.hlsl  realistic_compute.hlsl  (+3 more)
tests/golden/: README.md  normalize.py
tests/unit/: test_acos_without_saturate.cpp  test_all_resources_bound_not_set.cpp  test_anisotropy_without_anisotropic_filter.cpp  test_as_payload_over_16k.cpp  test_barrier_in_divergent_cf.cpp  test_bgra_rgba_swizzle_mismatch.cpp  test_bool_straddles_16b.cpp  test_branch_on_uniform_missing_attribute.cpp  test_buffer_load_width_vs_cache_line.cpp  test_byteaddressbuffer_load_misaligned.cpp  test_byteaddressbuffer_narrow_when_typed_fits.cpp  test_cbuffer_divergent_index.cpp  test_cbuffer_fits_rootconstants.cpp  test_cbuffer_large_fits_rootcbv_not_table.cpp  test_cbuffer_load_in_loop.cpp  test_cbuffer_padding_hole.cpp  test_cfg.cpp  test_cfg_util.cpp  test_clamp01_to_saturate.cpp  test_clip_from_non_uniform_cf.cpp  test_cluster_id_without_cluster_geometry_feature_check.cpp  test_coherence_hint_encodes_shader_type.cpp  test_coherence_hint_redundant_bits.cpp  test_compare_equal_float.cpp  test_comparison_sampler_without_comparison_op.cpp  test_comparison_with_nan_literal.cpp  test_compute_dispatch_grid_shape_vs_quad.cpp  test_config.cpp  test_config.hpp.in  test_coopvec_base_offset_misaligned.cpp  test_coopvec_fp4_fp6_blackwell_layout.cpp  test_coopvec_fp8_with_non_optimal_layout.cpp  test_coopvec_non_optimal_matrix_layout.cpp  test_coopvec_non_uniform_matrix_handle.cpp  test_coopvec_stride_mismatch.cpp  test_coopvec_transpose_without_feature_check.cpp  test_countbits_vs_manual_popcount.cpp  test_cross_with_up_vector.cpp  test_dead_store_sv_target.cpp  test_derivative_in_divergent_cf.cpp  (+173 more)
tools/slang-smoke/: CMakeLists.txt
tools/treesitter-smoke/: CMakeLists.txt  config.hpp.in  main.cpp
(+615 files in other folders)
